--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -9,7 +9,7 @@ on:
 name: sarif
 
 jobs:
-  upload-sarif:
+  rust-clippy-analyze:
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/main' }}
     steps:
@@ -22,7 +22,7 @@ jobs:
       - uses: Swatinem/rust-cache@v1
       - run: cargo install clippy-sarif sarif-fmt
       - run:
-          cargo clippy --all-targets --all-features --message-format=json |
+          cargo clippy --all-targets --message-format=json |
           clippy-sarif | tee results.sarif | sarif-fmt
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v1
