--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: Swatinem/rust-cache@v1
       - run: cargo install clippy-sarif sarif-fmt
       - run:
-          cargo clippy --all-targets --message-format=json |
+          cargo clippy --all-features --message-format=json |
           clippy-sarif | tee results.sarif | sarif-fmt
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v1
