--- a/.github/workflows/action-rs.yml
+++ b/.github/workflows/action-rs.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all-features --message-format=json | clippy-sarif | tee results.sarif | sarif-fmt
+          args: --all-features | clippy-sarif | tee results.sarif | sarif-fmt
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v1
         with:
