--- a/.github/workflows/action-rs.yml
+++ b/.github/workflows/action-rs.yml
@@ -24,7 +24,8 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
-      - run: rustup component add clippy clippy-sarif sarif-fmt
+      - run: rustup component add clippy
+      - run: cargo install clippy-sarif sarif-fmt
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
