--- a/.github/workflows/starterworkflow.yml
+++ b/.github/workflows/starterworkflow.yml
@@ -7,6 +7,10 @@ jobs:
   rust-clippy-analyze:
     name: Run rust-clippy analyzing
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
