--- a/.github/workflows/starterworkflow.yml
+++ b/.github/workflows/starterworkflow.yml
@@ -8,8 +8,8 @@ jobs:
     name: Run rust-clippy analyzing
     runs-on: ubuntu-latest
     permissions:
-      actions: read
       contents: read
+      security-events: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
